# BacktestingPanel

./: .prettierrc  BacktestPanel.spec  README.md  pyproject.toml
.github/workflows/: release.yml
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: lotSize.tsx  positions.tsx  toogleThema.tsx  trade.tsx
frontend/src/components/ui/: button.tsx  separator.tsx  sonner.tsx  toggle.tsx
frontend/src/hooks/: mutationCloseAll.ts  mutationClosePosition.ts  mutationTrade.ts  useGetPositions.ts  usePersistState.ts
frontend/src/layout/: index.tsx
frontend/src/lib/: theme.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.d.ts  close.ts  position.ts  trade.ts
resources/: BridgeTcpClient.ex5  BridgeTcpClient.mq5  TCPClient.mqh
src/: bootstrap.py  main.py  server.py  single_instance.py
src/config/: __init__.py  config.py
src/scripts/: build.py  dev.py
src/services/: api.py
